--- a/data/interfaces/default/home_stats.html
+++ b/data/interfaces/default/home_stats.html
@@ -205,5 +205,5 @@ DOCUMENTATION :: END
 % endif
 % endfor
 % else:
-<div class="text-muted">No stats to show for the selected period.</div><br>
+<div class="text-muted">所选时期没有可显示的统计数据。</div><br>
 % endif
